feat: update to banco de sanguev2

--- a/localstorage-examples/index.html
+++ b/localstorage-examples/index.html
@@ -1,9 +1,15 @@
 <!-- <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css">  <title>Document</title>
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet"
+    type="text/css"
+    href="style.css">
+  <title>Document</title>
 </head>
+
 <body>
   <button id="create-user">criar usuário</button>
   <button id="get-users">buscar usuários</button>
@@ -21,8 +27,10 @@
   <button id="get-one-representative">buscar um representante</button>
   <button id="edit-representative">editar representante</button>
   <button id="delete-representative">deletar representante</button>
+  <button id="create-donation-center">Criar banco de sangue</button>
 
 
-<script src="index.js"></script>
+  <script src="index.js"></script>
 </body>
+
 </html> -->
