--- a/src/pages/representative-donor-screen/index.html
+++ b/src/pages/representative-donor-screen/index.html
@@ -84,27 +84,13 @@
       <div class="main-menu__image-color"></div>
       <h1 class="main-menu__title">Informações do doador</h1>
       <div class="main-menu__action">
-        <div class="main-menu__action__div">
-          <button class="main-menu__action__button"
-            id="edit-account-button">
-            <object data="../../public/assets/icons/edit-icon.png"></object>
-          </button>
-          <p class="main-menu__action__text">Editar Perfil</p>
-        </div>
-        <div class="main-menu__action__div">
-          <button class="main-menu__action__button"
-            id="delete-account-button">
-            <object data="../../public/assets/icons/trash-icon.png"></object>
-          </button>
-          <p class="main-menu__action__text">Encerrar</p>
-        </div>
         <div class="main-menu__action__div"
           id="schedule-div">
           <button class="main-menu__action__button"
             id="open-modal-schedule-donation">
             <object data="../../public/assets/icons/schedule-icon.png"></object>
           </button>
-          <p class="main-menu__action__text">Agendar</p>
+          <p class="main-menu__action__text">Agendar doação</p>
         </div>
       </div>
     </section>
